Ensure we don't get an overflow on the x axis

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
 .stat {
     color: #941100;
 }
+
+body {
+    overflow-x: hidden;
+}
